recursion.logo.polygonfractal.PolygonFractal.scala.error
Erreur de compilation :
PolygonFractal:11: error: ';' expected but ')' found.
    for(i <- 1 to sides) to sides){
                                 ^